--- a/src/.env
+++ b/src/.env
@@ -1,11 +1,11 @@
-MONGO_DB_NAME=conveyor
-MONGO_DB_USERNAME=conveyor
-MONGO_DB_PASSWORD=XqtQOaRajtIvFxkE
-MONGO_DB_HOST=mongos.limetray.com
-MONGO_DB_PORT=27017
+MONGO_DB_NAME=
+MONGO_DB_USERNAME=
+MONGO_DB_PASSWORD=
+MONGO_DB_HOST=
+MONGO_DB_PORT=
 
-MYSQL_DB_NAME=conveyor_service
-MYSQL_DB_USERNAME=limetraycmsprod
-MYSQL_DB_PASSWORD=limetraycmsprod2
-MYSQL_DB_HOST=46.137.254.209
-MYSQL_DB_PORT=3306
+MYSQL_DB_NAME=
+MYSQL_DB_USERNAME=
+MYSQL_DB_PASSWORD=
+MYSQL_DB_HOST=
+MYSQL_DB_PORT=
